# project

./: README.md
python-boilerplate/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  HISTORY.md  LICENSE  README.md  justfile  pyproject.toml
python-boilerplate/docs/: index.md  installation.md  usage.md
python-boilerplate/src/python_boilerplate/: __init__.py
